fixing alignement for larger views in linkbox mode
SRFCMS-7060

--- a/source/_patterns/20-molecules/linkbox/linkbox.scss
+++ b/source/_patterns/20-molecules/linkbox/linkbox.scss
@@ -87,3 +87,7 @@
     position: inherit;
   }
 }
+
+.linkbox__list{
+  margin-left: 0;
+}
